Add amsmath ass dependency

--- a/vignettes/new_distinctiveness.Rmd
+++ b/vignettes/new_distinctiveness.Rmd
@@ -5,6 +5,7 @@ date: "`r Sys.Date()`"
 header-includes:
   - \usepackage{mathtools}
   - \usepackage{cancel}
+  - \usepackage{amsmath}
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Alternative definition of distinctiveness}
