--- a/vignettes/rarity_indices.Rmd
+++ b/vignettes/rarity_indices.Rmd
@@ -2,6 +2,8 @@
 title: "How to use `funrar`, an example with plant communities dataset."
 author: "Denelle Pierre & Greni\u00e9 Matthias"
 date: "`r Sys.Date()`"
+header-includes:
+  - \usepackage{amsmath}
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{How to use 'funrar', an example with plant communities dataset}
