--- a/vignettes/new_distinctiveness.Rmd
+++ b/vignettes/new_distinctiveness.Rmd
@@ -83,7 +83,7 @@ alternative_distinctiveness = function(pres_mat, distance_obj, given_T) {
   dist_mat = dist_mat[kept_sp, kept_sp, drop = FALSE]
   
   
-  # Correspondance matrix (tracking which species we want to keep)
+  # Correspondence matrix (tracking which species we want to keep)
   corr_dist = dist_mat
   corr_dist[dist_mat > given_T] = 0
   corr_dist[dist_mat <= given_T] = 1
