Removed all cals to library(dplyr)

--- a/vignettes/new_distinctiveness.Rmd
+++ b/vignettes/new_distinctiveness.Rmd
@@ -103,7 +103,10 @@ alternative_distinctiveness = function(pres_mat, distance_obj, given_T) {
   di_mat = t(di_mat)
   dimnames(di_mat) = dimnames(pres_mat)
   
-  dplyr::mutate(funrar::matrix_to_stack(di_mat, "Di"), given_range = given_T)
+  di_df = funrar::matrix_to_stack(di_mat, "Di")
+  di_df$given_range = given_T
+  
+  return(di_df)
 }
 ```
 Here we truncate the distance matrix in order to "nullify" the effect of species that are not in specified range.
@@ -115,9 +118,10 @@ presence_matrix = matrix(c(rep(1, 3), 1, 0, 1, 1, 1, 0), nrow = 3, ncol = 3,
 
 # Test over a ragne of possible T values
 all_T = lapply(seq(0.5, 1.5, length.out = 50),
-       function(given_number) alternative_distinctiveness(presence_matrix,
-                                                          species_distance,
-                                                          given_number))
+       function(given_number)  alternative_distinctiveness(
+         presence_matrix,
+         species_distance,
+         given_number))
 
 all_T = do.call(rbind.data.frame, all_T)
 ```
@@ -180,8 +184,10 @@ We see that species have close neighbors at different distances (leap from top l
 
 As proposed we can also distinctiveness relative to trait range and see what it changes:
 ```{r scaled_range}
-all_ranges = dplyr::mutate(all_ranges, scaled_Di =
-                             ifelse(Di != 1, Di / given_range, Di))
+all_ranges$scaled_Di = ifelse(
+  all_ranges$Di != 1,
+  all_ranges$Di / all_ranges$given_range,
+  all_ranges$Di)
 
 ggplot(subset(all_ranges, site %in% c("AR07", "AR51", "AR02")),
        aes(given_range, scaled_Di, group = species)) +
@@ -384,8 +390,10 @@ alternative_distinctiveness_abundance = function(abund_mat, dist_matrix,
   di_mat = t(di_mat)
   dimnames(di_mat) = dimnames(abund_mat)
   
-  dplyr::mutate(funrar::matrix_to_stack(di_mat, "Di"),
-                given_range = given_range)
+  di_df = funrar::matrix_to_stack(di_mat, "Di")
+  di_df$given_range = given_range
+  
+  return(di_df)
 }
 ```
 
