--- a/vignettes/rarity_indices.Rmd
+++ b/vignettes/rarity_indices.Rmd
@@ -279,7 +279,6 @@ In this section, some ideas to plot your results are presented. For example the 
 
 ```{r}
 library(ggplot2)
-library(dplyr)
 
 # Heatmap with distinctiveness values
 ggplot(di_df, aes(species, site)) +
@@ -292,7 +291,7 @@ quant = quantile(di_df$Di, probs = seq(0, 1, 0.10))
 labels_quant = paste(names(quant)[-length(quant)], names(quant)[-1], sep = "-")
  
 di_density = data.frame(density(di_df$Di)[c("x", "y")])
-di_density = filter(di_density, x >= quant[[1]] & x <= quant[[length(quant)]])
+di_density = subset(di_density, x >= quant[[1]] & x <= quant[[length(quant)]])
 di_density$quant = cut(di_density$x, breaks = quant)   
 quant = quantile(di_df$Di, probs = seq(0, 1, 0.10))
 labels_quant = paste(names(quant)[-length(quant)], names(quant)[-1], sep = "-")
@@ -315,7 +314,7 @@ quant = quantile(si_df$Si, probs = seq(0, 1, 0.10))
 labels_quant = paste(names(quant)[-length(quant)], names(quant)[-1], sep = "-")
  
 si_density = data.frame(density(si_df$Si)[c("x", "y")])
-si_density = filter(si_density, x >= quant[[1]] & x <= quant[[length(quant)]])
+si_density = subset(si_density, x >= quant[[1]] & x <= quant[[length(quant)]])
 si_density$quant = cut(si_density$x, breaks = quant)   
 quant = quantile(si_df$Si, probs = seq(0, 1, 0.10))
 labels_quant = paste(names(quant)[-length(quant)], names(quant)[-1], sep = "-")
@@ -334,7 +333,7 @@ si_dens
 
 # Regional rarity: restrictedness versus uniqueness
 colnames(ri_df)[colnames(ri_df) == "sp"] = "species"
-ri_ui <- inner_join(ri_df, ui_df, by = "species")
+ri_ui <- merge(ri_df, ui_df, by = "species")
 
 ggplot(ri_ui, aes(Ri, Ui)) +
   geom_point() + 
