--- a/vignettes/sparse_matrices.Rmd
+++ b/vignettes/sparse_matrices.Rmd
@@ -41,8 +41,8 @@ If your site-species matrix is big, it may contain a lot zero because it is very
 # Generate a matrix with 1000 species and 200 sites
 my_mat = matrix(sample(c(0, 0, 0, 0, 0, 0, 1), replace = TRUE, size = 200000),
                 ncol = 1000, nrow = 200)
-colnames(my_mat) = paste0("sp", 1:ncol(my_mat))
-rownames(my_mat) = paste0("site", 1:nrow(my_mat))
+colnames(my_mat) = paste0("sp", seq_len(ncol(my_mat)))
+rownames(my_mat) = paste0("site", seq_len(nrow(my_mat)))
 
 my_mat[1:5, 1:5]
 ```
@@ -91,7 +91,7 @@ library(funrar)
 
 # Get a table of traits
 trait_df = data.frame(trait = runif(ncol(my_mat), 0, 1))
-rownames(trait_df) = paste0("sp", 1:ncol(my_mat))
+rownames(trait_df) = paste0("sp", seq_len(ncol(my_mat)))
 
 # Compute distance matrix
 dist_mat = compute_dist_matrix(trait_df)
@@ -120,8 +120,8 @@ mat_filling = function(my_mat) {
 
 sparse_and_mat = function(n_zero) {
   my_mat = generate_matrix(n_zero)
-  colnames(my_mat) = paste0("sp", 1:ncol(my_mat))
-  rownames(my_mat) = paste0("site", 1:nrow(my_mat))
+  colnames(my_mat) = paste0("sp", seq_len(ncol(my_mat)))
+  rownames(my_mat) = paste0("site", seq_len(nrow(my_mat)))
   
   sparse_mat = as(my_mat, "sparseMatrix")
   
