--- a/vignettes/sparse_matrices.Rmd
+++ b/vignettes/sparse_matrices.Rmd
@@ -55,15 +55,15 @@ filling = 1 - sum(my_mat == 0)/(ncol(my_mat)*nrow(my_mat))
 filling
 ```
 
-To convert from a normal matrix to a sparse matrix you can use `as(my_mat, "sparseMatrix")`:
+To convert from a normal matrix to a sparse matrix you can use `as(my_mat, "dgCMatrix")`:
 
 ```{r convertSparseMat}
 library(Matrix)
 
-sparse_mat = as(my_mat, "sparseMatrix")
+sparse_mat = as(my_mat, "dgCMatrix")
 
-is(my_mat, "sparseMatrix")
-is(sparse_mat, "sparseMatrix")
+is(my_mat, "dgCMatrix")
+is(sparse_mat, "dgCMatrix")
 ```
 
 it completely changes the structure as well as the memory it takes in the RAM:
@@ -123,7 +123,7 @@ sparse_and_mat = function(n_zero) {
   colnames(my_mat) = paste0("sp", seq_len(ncol(my_mat)))
   rownames(my_mat) = paste0("site", seq_len(nrow(my_mat)))
   
-  sparse_mat = as(my_mat, "sparseMatrix")
+  sparse_mat = as(my_mat, "dgCMatrix")
   
   return(list(mat = my_mat, sparse = sparse_mat))
 }
