--- a/vignettes/rarity_indices.Rmd
+++ b/vignettes/rarity_indices.Rmd
@@ -1,12 +1,12 @@
 ---
-title: "How to use `funrar`, an example with plant communities dataset."
+title: "Introduction to funrar through an example"
 author: "Denelle Pierre & Greni\u00e9 Matthias"
 date: "`r Sys.Date()`"
 header-includes:
   - \usepackage{amsmath}
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{How to use 'funrar', an example with plant communities dataset}
+  %\VignetteIndexEntry{Introduction to funrar through an example}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
